--- a/part1/task7/css/index.css
+++ b/part1/task7/css/index.css
@@ -134,14 +134,46 @@
 .main .activity-container .find {
   height: 340px;
   min-width: 1280px;
-  background-color: #8d8d8d; }
-  .main .activity-container .find select {
-    width: 236px;
-    height: 36px;
+  background-color: #8d8d8d;
+  background-image: url("../images/map.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  padding-top: 50px; }
+  .main .activity-container .find .find-title {
+    font-size: 21px;
+    color: #fff;
+    text-align: center;
+    margin-bottom: 10px; }
+  .main .activity-container .find .find-space {
+    margin: 0 auto 20px auto;
+    height: 3px;
+    width: 32px;
+    background-color: #fff; }
+  .main .activity-container .find .find-sub {
+    margin-top: 20px;
+    font-size: 12px;
     color: #8d8d8d;
-    border: 1px solid #e7504d;
-    background: url("../images/arrow.jpg") no-repeat 100% 50% #fff;
-    overflow: hidden; }
+    text-align: center; }
+  .main .activity-container .find .selects {
+    width: 1030px;
+    height: 36px;
+    margin: 50px auto 0; }
+    .main .activity-container .find .selects select {
+      margin-right: 28px;
+      float: left;
+      width: 236px;
+      height: 36px;
+      color: #8d8d8d;
+      border: 1px solid #e7504d;
+      background: url("../images/arrow.jpg") no-repeat 100% 50% #fff;
+      overflow: hidden; }
+    .main .activity-container .find .selects button {
+      float: left;
+      width: 236px;
+      height: 36px;
+      color: #fff;
+      background-color: #e7504d;
+      border: 0; }
 
 .main .activity-container .activities1 {
   min-width: 1280px;
@@ -162,3 +194,196 @@
         text-align: center;
         font-size: 12px;
         color: #8d8d8d; }
+
+.main .activity-container .activities2 .focus-act {
+  min-width: 1280px;
+  height: 570px; }
+  .main .activity-container .activities2 .focus-act .focus-img {
+    width: 850px;
+    height: 570px;
+    background: url("../images/newword.jpg") no-repeat center center;
+    color: #fff;
+    text-align: center; }
+    .main .activity-container .activities2 .focus-act .focus-img .a2i-title1 {
+      margin-top: 136px;
+      font-size: 50px; }
+    .main .activity-container .activities2 .focus-act .focus-img .a2i-title2 {
+      font-size: 158px; }
+    .main .activity-container .activities2 .focus-act .focus-img .a2i-title3 {
+      margin-top: 30px;
+      font-size: 22px; }
+    .main .activity-container .activities2 .focus-act .focus-img .a2i-title4 {
+      line-height: 40px;
+      font-size: 22px; }
+  .main .activity-container .activities2 .focus-act .focus-content {
+    width: 430px;
+    height: 570px;
+    padding: 162px 70px 0 70px; }
+    .main .activity-container .activities2 .focus-act .focus-content .a2c-title {
+      font-size: 22px;
+      text-align: center;
+      margin-bottom: 22px; }
+      .main .activity-container .activities2 .focus-act .focus-content .a2c-title .page-num {
+        color: #e7504d; }
+    .main .activity-container .activities2 .focus-act .focus-content .a2c-content {
+      font-size: 12px;
+      font-family: "宋体";
+      color: #8d8d8d;
+      line-height: 24px;
+      margin-bottom: 50px; }
+    .main .activity-container .activities2 .focus-act .focus-content .a2c-btn {
+      margin: 0 auto;
+      display: block;
+      text-align: center;
+      line-height: 32px;
+      text-decoration: none;
+      font-size: 12px;
+      width: 106px;
+      height: 32px;
+      border: 1px solid #e7504d;
+      color: #e7504d; }
+
+.main .activity-container .activities2 .normal-act > div {
+  height: 518px;
+  font-size: 22px;
+  line-height: 30px;
+  font-family: "黑体";
+  text-align: center; }
+
+.main .activity-container .activities2 .normal-act .normal-act-btn {
+  margin: 0 auto;
+  display: block;
+  width: 168px;
+  height: 44px;
+  text-decoration: none;
+  line-height: 44px; }
+
+.main .activity-container .activities2 .normal-act .normal-act-space {
+  height: 2px;
+  width: 38px;
+  margin: 20px auto; }
+
+.main .activity-container .activities2 .normal-act .normal-act-red {
+  padding-top: 170px;
+  background-color: #e7504d;
+  color: #fff; }
+  .main .activity-container .activities2 .normal-act .normal-act-red .normal-act-space {
+    background-color: #fff; }
+  .main .activity-container .activities2 .normal-act .normal-act-red .normal-act-btn {
+    border: 1px solid #fff;
+    color: #fff; }
+
+.main .activity-container .activities2 .normal-act .normal-act-white {
+  padding-top: 170px;
+  background-color: #fff; }
+  .main .activity-container .activities2 .normal-act .normal-act-white .normal-act-space {
+    background-color: #8d8d8d; }
+  .main .activity-container .activities2 .normal-act .normal-act-white .normal-act-btn {
+    border: 1px solid #e7504d;
+    color: #e7504d; }
+
+.main .volunteer {
+  padding-top: 120px;
+  text-align: center;
+  font-family: "黑体";
+  margin-bottom: 156px; }
+  .main .volunteer .volunteer-title {
+    font-size: 22px; }
+  .main .volunteer .volunteer-spcae {
+    margin: 5px auto 10px;
+    height: 2px;
+    width: 44px;
+    background-color: #e7504d; }
+  .main .volunteer .volunteer-sub-title {
+    margin: 0 auto 100px;
+    width: 426px;
+    font-size: 12px;
+    color: #8d8d8d; }
+  .main .volunteer .clauses {
+    padding-left: 140px; }
+    .main .volunteer .clauses .clause-item .clause-title {
+      font-size: 14px;
+      text-align: left;
+      margin-bottom: 28px; }
+    .main .volunteer .clauses .clause-item .clause-content {
+      text-align: left;
+      font-size: 12px;
+      line-height: 24px;
+      font-family: "宋体";
+      color: #8d8d8d; }
+    .main .volunteer .clauses .clause-item .clause-more {
+      display: inline-block;
+      margin-left: 220px;
+      margin-bottom: 28px;
+      text-decoration: none;
+      color: #8d8d8d; }
+      .main .volunteer .clauses .clause-item .clause-more .more-arrow {
+        font-size: 12px;
+        display: inline-block;
+        transform: rotate(90deg); }
+  .main .volunteer .submite input {
+    margin: 6px 9px;
+    border: 0;
+    height: 40px;
+    width: 308px;
+    background-color: #ededec; }
+  .main .volunteer .submite .life {
+    margin: 6px 0;
+    width: 638px;
+    height: 120px;
+    background-color: #ededec;
+    border: 0; }
+  .main .volunteer .submite button {
+    width: 638px;
+    height: 38px;
+    background-color: #ededec;
+    border: 0; }
+
+.footer .contact {
+  min-width: 1280px;
+  height: 360px;
+  background-color: #32353e;
+  text-align: center;
+  padding-top: 90px;
+  color: #fff; }
+  .footer .contact .contact-title {
+    font-size: 22px;
+    margin-bottom: 12px; }
+  .footer .contact .contact-sub-title {
+    margin: 0 auto 22px;
+    width: 470px;
+    font-size: 12px;
+    line-height: 20px;
+    font-family: "宋体"; }
+  .footer .contact input {
+    width: 430px;
+    height: 42px;
+    color: #8d8d8d;
+    font-size: 14px;
+    border: 0; }
+  .footer .contact button {
+    width: 80px;
+    height: 43px;
+    background-color: #8d8d8d;
+    color: #fff;
+    font-size: 15px;
+    letter-spacing: 10px;
+    text-indent: 10px;
+    border: 0; }
+  .footer .contact .social-item {
+    margin: 40px 10px 0 10px;
+    display: inline-block;
+    color: #fff; }
+
+.footer .copyright {
+  min-width: 1280px;
+  height: 60px;
+  line-height: 60px;
+  background-color: #303039;
+  color: #fff;
+  font-family: "宋体";
+  font-size: 12px;
+  padding: 0 50px 0 100px; }
+  .footer .copyright .toup {
+    text-decoration: none;
+    color: #fff; }
